--- a/client-ind/about.html
+++ b/client-ind/about.html
@@ -10,6 +10,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/themes/smoothness/jquery-ui.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
+    <link href="https://fonts.googleapis.com/css?family=Homemade+Apple" rel="stylesheet">
 </head>
 
 <body>
@@ -33,13 +34,12 @@
         <div id="section1" class="feature5">
             <div class="col-12" style="text-align: right">
                 <button class="ctas-button my_popup_open" width="160px"><h2>Director's Message</h2></button>
-                <img src="img/about-us.svg" width="100%" height="auto" alt="Environment">
+                <img src="img/about.svg" width="100%" height="auto" alt="Environment-friendly">
             </div>
             <div id="my_popup">
-                <div style="background: #FFF; padding: 100px 60px 100px 60px; border-radius: 6px;" class="container-sml flex">
+                <div style="background: #fff; padding: 100px 60px 100px 60px; border-radius: 6px;" class="container-sml flex">
                     <div class="col-12">
-                        <div style="display: block; text-align: left;"><img src="img/indmark.png" width="auto" height="60px" alt="Indmark">
-                            <p style="color: #63b32e">Exceeding Sustainability</p>
+                        <div style="display: block; text-align: left;"><img src="img/directors-header.png" width="100%" height="auto" alt="Indmark">
                         </div>
                         <div class="spacer" style="width: auto; height: 20px;"></div>
 
@@ -51,10 +51,13 @@
                             Indmark’s commitment to minimise the impact of its activities on the environment has led to the development of Square Fiber Drums in 2017. A product range that lessens the environmental impact of both production and distribution, Square Fiber Drums are a crucial development in our pursuit of excellence and environmental sustainability.
                             </br>Since our outset in 1992, Indmark has set new industry standards in manufacturing Cable Trays, Erection Materials and Hot-Dip Galvanizing. We join forces with a global clientele to develop products that bear the highest quality standards. And we believe that our Square Fiber Drums will continue to deliver with that devotion.
                             </br>
-                            </br><b>Narendra Meher</b>
+                            </br><div style="font-family: 'Homemade Apple', cursive; font-size: 18px;">Narendra Meher</div>
                             </br>Managing Director
                             </br>INDMARK Group
                         </p>
+                         <div style="display: block; text-align: right;"><img src="img/directors-footer.png" width="100%" height="auto" alt="Indmark-Paperform">
+                            
+                        </div>
                     </div>
                 </div>
             </div>
