--- a/client-ind/environment.html
+++ b/client-ind/environment.html
@@ -35,17 +35,17 @@
         <div id="sectionEnv" class="feature5" style="background: #112131; color: #63b32e">
             <div class="container-sml flex">
                 <div style="display: block; text-align: center;" class="col-12">
-                    <div class="animated infinite rotateIn"><img src="img/recyclable.svg" width="auto" height="160px" alt="50% more storage"></div>
+                    <div class="animated rotateIn"><img src="img/recyclable.svg" width="auto" height="160px" alt="50% more storage"></div>
                     <h3 class="subheading">100% Recyclable</h3>
                 </div>
             </div>
             <div class="container-sml flex">
                 <div style="display: block; text-align: center;" class="col-6">
-                    <div class="animated infinite rotateIn"><img src="img/biodegradable.svg" width="auto" height="160px" alt="Save up to 40% on freight"></div>
+                    <div class="animated rotateIn"><img src="img/biodegradable.svg" width="auto" height="160px" alt="Save up to 40% on freight"></div>
                     <h3 class="subheading">100% bio-degradable</h3>
                 </div>
                 <div style="display: block; text-align: center;" class="col-6">
-                    <div class="animated infinite rotateIn"><img src="img/trouble-free-recycling.svg" width="auto" height="160px" alt="Form a compressed storage"></div>
+                    <div class="animated rotateIn"><img src="img/trouble-free-recycling.svg" width="auto" height="160px" alt="Form a compressed storage"></div>
                     <h3 class="subheading">Trouble-free recycling</h3>
                 </div>
             </div>
