--- a/client-ind/index.html
+++ b/client-ind/index.html
@@ -46,10 +46,10 @@
                     <img src="img/Square_drums.png" width="360px" height="auto">
                 </div>
                 <div class="animated fadeInRightBig col-6 centervertical">
-                    <div style="display: block; text-align: center;"><img src="img/indmark.png" width="auto" height="90px" alt="Indmark">
-                        <h1 style="color: #63b32e">Exceeding Sustainability</h1>
+                    <div style="display: block; text-align: center;"><img src="img/indmark.png" width="auto" height="70px" alt="Indmark">
+                        <h2 style="color: #63b32e">Exceeding Sustainability</h2>
                         <div class="spacer" style="width: auto; height: 20px;"></div>
-                        <h1 style="color: #144194"><b>Square Fiber Drums</b></h1>                
+                        <div class="animated flip"><h1 style="color: #144194; font-size: 48px"><b>Square Fiber Drums</b></h1></div>                
                     </div>
                 </div>
             </div>
@@ -72,7 +72,7 @@
                     <div id="slide1" class="container-sml flex" style="padding-top: 40px">
                         <div class="col-1"></div>
                         <div class="col-6 centervertical">
-                            <h3 class="subheading">100% recyclable, bio degradable </br>and environment friendly
+                            <h3 class="subheading">Square Fiber Drums are 100% recyclable, bio degradable and environment friendly
                             </h3>
                         </div>
                         <div class="col-4 offset-col-2 centervertical">
@@ -84,7 +84,7 @@
                     <div id="slide2" style="padding-top: 40px" class="container-sml flex">
                         <div class="col-1"></div>
                         <div class="col-6 centervertical">
-                            <h3 class="subheading">Optimum consumption</br>of space
+                            <h3 class="subheading">Square Fiber Drums enable optimum consumption of space
                             </h3>
                         </div>
                         <div class="col-4 centervertical">
@@ -96,7 +96,7 @@
                     <div id="slide3" style="padding-top: 40px" class="container-sml flex">
                         <div class="col-1"></div>
                         <div class="col-6 centervertical">
-                            <h3 class="subheading">Cost-effective delivery </br>and sustainability
+                            <h3 class="subheading">Square Fiber Drums secure cost-effective delivery and sustainability
                             </h3>
                         </div>
                         <div class="col-4 centervertical">
@@ -109,7 +109,7 @@
                         <div class="col-1"></div>
                         <div class="col-6 centervertical">
                             <h3 class="subheading">
-                            Supreme strength and stability
+                            Square Fiber Drums provide supreme strength and stability
                             </h3>
                         </div>
                         <div class="col-4 centervertical">
@@ -122,7 +122,7 @@
                         <div class="col-1"></div>
                         <div class="col-6 centervertical">
                             <h3 class="subheading">
-                            Extensive range in sizes of </br>Square Fibre drums
+                            Square Fiber Drums have extensive range in sizes of Square Fibre drums
                             </h3>
                         </div>
                         <div class="col-4 centervertical">
@@ -205,7 +205,7 @@ Indmark Paperform has devised an innovative packing solution through our Square 
                     <div id="slide14" class="container-sml flex">
                         <div class="col-1"></div>
                         <div class="col-4 centervertical">
-                            <img src="img/strenghth.svg" width="100px" height="auto" alt="Supreme Strength and Stability">
+                            <img src="img/strenghth.png" width="100px" height="auto" alt="Supreme Strength and Stability">
                         </div>
                         <div class="col-6 centervertical">
                             <h3 class="heading">
