--- a/client-ind/logistics.html
+++ b/client-ind/logistics.html
@@ -32,9 +32,8 @@
                 </nav>
             </div>
         </div>
-        <div class="spacer" style="width: auto; height: 100px;"></div>
-
-        <div id="slide-show-3" class="feature-5 container-lrg" style="background: #112131; color: #63b32e !important; text-decoration: underline;">
+ 
+        <div id="slide-show-3" class="feature-5" style="background: #112131; color: #63b32e !important; text-decoration: underline;">
             <div class="spacer" style="width: auto; height: 100px;"></div>
             <div class="owl-carousel owl-theme">
                 <div id="slide1" class="container-sml flex">
@@ -94,7 +93,7 @@
                     <div class="spacer" style="width: auto; height: 40px;"></div>
 
                     <div class="text-center paragraph">
-                        <p>The right sized design ensures there is no excess air in your packaging, meaning fewer pallets to fill, fewer trucks to move and greater savings to be made.</br>
+                        <p>The right sized design of Square Fiber Drums ensures there is no excess air in your packaging, meaning fewer pallets to fill, fewer trucks to move and greater savings to be made.</br>
                         </p>
                     </div>
                 </div>
