--- a/index.html
+++ b/index.html
@@ -43,12 +43,12 @@
                 <div class="iphoneipad">
                     <div class="iphone">
                         <div class="mask">
-                            <img class="mask-img" src="mobileapp.svg" alt="mobileapp">
+                            <img class="mask-img" src="images/aks.png" alt="mobileapp">
                         </div>
                     </div>
                     <div class="ipad">
                         <div class="mask">
-                            <img class="mask-img" src="webapp.svg">
+                            <img class="mask-img" src="images/aks02.png">
                         </div>
                     </div>
                 </div>
