--- a/lenses.html
+++ b/lenses.html
@@ -10,7 +10,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.11/p5.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.11/addons/p5.dom.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.11/addons/p5.sound.min.js"></script>
-    <script src="addons/p5.dom.js"></script>
     <script src="https://use.fontawesome.com/76f357c983.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Handlee|Oxygen:400,700" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="style.css">
@@ -25,7 +24,7 @@
     <div class="container-lrg">
         <div class="col-12 spread">
           <div>
-            <a><img src="artmarq_snap.png" width="50" height="50">
+            <a><img src="images/artmarq_snap.png" width="50" height="50">
             </a>
           </div>
           <div>
